بعد اضافة المراسلات

--- a/templates/header.html
+++ b/templates/header.html
@@ -28,6 +28,8 @@
       <a class="hdr-link" href="/referrals/">إحالاتي</a>
       <a class="hdr-link" href="/referrals/new/">إنشاء إحالة</a>
       <a class="hdr-link" href="/workflow/reports/">التقارير</a>
+      <a class="hdr-link" href="/messages/">مراسلات</a>
+
 
       {% if request.user.is_authenticated %}
         <span class="hdr-user">مرحبًا، {{ request.user.username }}</span>
